--- a/app/src/main/res/drawable/rounded_corner_edit_text.xml
+++ b/app/src/main/res/drawable/rounded_corner_edit_text.xml
@@ -4,6 +4,6 @@
     android:shape="rectangle">
     <stroke
         android:width="1dp"
-        android:color="#B5654C" />
+        android:color="@color/lightOrange" />
     <corners android:radius="8dp" />
 </shape>
