--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -6,6 +6,6 @@
     android:layout_height="match_parent"
     android:layout_margin="15dp"
     android:orientation="vertical"
-    tools:context=".ProfileActivity">
+    tools:context=".fragments.ProfileActivity">
 
 </LinearLayout>
